# ome

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
doc/: data.md
examples/: preview_dsec.py  preview_mvsec.py  preview_tumvie.py  preview_vector.py
src/ome/io/reader/: base.py  dsec.py  m3ed.py  mvsec.py  tumvie.py  vector.py
src/ome/io/sample/: sequence.py  uniform.py
src/ome/repr/: frame.py  voxel.py
src/ome/scale/: common.py
src/ome/utils/: _nvidia_cdll_hook.py  sync.py  timer.py  transforms.py
src/tools/: frame_generator.py  preview.py  timer.py  window.py
tests/: test_voxel.py
