[project]
name = "ome"
version = "0.2.0"
description = "Oh My Event - Just a busybox for Event Camera"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "hdf5plugin>=5.1.0",
    "cupy-cuda12x>=13.6.0",
    "numba>=0.62.0",
    "nvidia-cuda-nvrtc-cu12==12.8.*",
    "nvidia-cuda-runtime-cu12==12.8.*",
]

[tool.ruff]
line-length = 144

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
tools = ["matplotlib>=3.10.6", "opencv-python>=4.12.0.88", "pyqt6>=6.9.1", "tyro>=0.9.32"]
